# ChangeLog for dev-python/lxml
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/lxml/ChangeLog,v 1.94 2010/12/27 21:01:02 ranger Exp $

  27 Dec 2010; Brent Baude <ranger@gentoo.org> lxml-2.2.8.ebuild:
  Marking lxml-2.2.8 ppc64 for bug 341325

  13 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  lxml-2.2.8.ebuild:
  Restrict Jython ABIs.

  23 Oct 2010; Raúl Porcel <armin76@gentoo.org> lxml-2.2.8.ebuild:
  ia64/sparc stable wrt #341325

  20 Oct 2010; Brent Baude <ranger@gentoo.org> lxml-2.2.8.ebuild:
  stable ppc, bug 341325

  20 Oct 2010; Christian Faulhammer <fauli@gentoo.org> lxml-2.2.8.ebuild:
  stable x86, bug 341325

  19 Oct 2010; Jeroen Roovers <jer@gentoo.org> lxml-2.2.8.ebuild:
  Stable for HPPA (bug #341325).

  18 Oct 2010; Markos Chandras <hwoarang@gentoo.org> lxml-2.2.8.ebuild:
  Stable on amd64 wrt bug #341325

*lxml-2.2.8 (12 Sep 2010)

  12 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +lxml-2.2.8.ebuild:
  Version bump.

*lxml-2.2.7 (24 Jul 2010)

  24 Jul 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +lxml-2.2.7.ebuild:
  Version bump. Restrict 3.2 Python ABI (bug #318923).

  11 May 2010; Brent Baude <ranger@gentoo.org> lxml-2.2.6.ebuild:
  stable ppc64, bug 313145

  08 May 2010; Raúl Porcel <armin76@gentoo.org> lxml-2.2.6.ebuild:
  ia64/sparc stable wrt #313145

  26 Apr 2010; Christian Faulhammer <fauli@gentoo.org> lxml-2.2.6.ebuild:
  stable x86, bug 313145

  25 Apr 2010; Javier Villavicencio <the_paya@gentoo.org> lxml-2.2.6.ebuild:
  Keyworded ~x86-fbsd.

  18 Apr 2010; <nixnut@gentoo.org> lxml-2.2.6.ebuild:
  ppc stable #313145

  08 Apr 2010; Jeroen Roovers <jer@gentoo.org> lxml-2.2.6.ebuild:
  Stable for HPPA (bug #313145).

  07 Apr 2010; Markos Chandras <hwoarang@gentoo.org> lxml-2.2.6.ebuild:
  Stable on amd64 wrt bug #313145

  06 Mar 2010; Raúl Porcel <armin76@gentoo.org> lxml-2.2.4.ebuild: