@@ -1,9 +1,7 @@
 AUX lxml-2.2.4-python-3.patch 1270 RMD160 16a79e8e05ee0f0f682340bde63d3e3c6cb8819b SHA1 f03dedccab36df33ba1d043f9378730240d7b00f SHA256 a254619109f84b06e188ea2b148ce3ebe5a9cc81da73eb746a85731ee91c882b
-DIST lxml-2.2.6.tgz 2923134 RMD160 6f8cded975cf10b1dd79db22a9f912eaea86363c SHA1 340d8cee8b787e9b2d2ab8ba2ab268460efa9232 SHA256 7fd36e4a56360cd5d7319e357b04a90e2c6b836ea220c88f9451c300ae33cc5e
-DIST lxml-2.2.7.tgz 2924428 RMD160 294a225825c5fc109dc42e9d9fb96a059991a58f SHA1 3e0ba542d4f56bc4e69187ae1eba34778ab10db8 SHA256 e0f8965684c23896a7e09115a74b77118a44d2214479f89fd16b1f36556e7759
 DIST lxml-2.2.8.tgz 2922192 RMD160 c7de4d36948c4209be557b438792df7d5851bbe9 SHA1 9012ae676160d0d2fff980b07607084e26d53da7 SHA256 89b73925b5e3295dcf4675cb948007a20eb029fe35c9a162ae19ec11f1abafe5
-EBUILD lxml-2.2.6.ebuild 2167 RMD160 4c7ed474131ebd962795f85598d4079c61ba5eb8 SHA1 013631ca15322b532eaf743a0f1061897807d47f SHA256 e961d0814032a5594cb6802492cb740973025b11ee4e7bdcda6a6727cb4f182e
-EBUILD lxml-2.2.7.ebuild 2151 RMD160 64225dc017b038fe7358f63e68f9e2ee9a4c2ab3 SHA1 7ec3ccc03d69a62f5145ea5ed680099799008851 SHA256 302bcbf3df2c937453ade62fc019104faa711e16453bd2edd682598998a38535
+DIST lxml-2.3.tgz 3187747 RMD160 fb74261101027506a480729dfd5ef303c29d14d5 SHA1 2384caa37b94b312d97d3e4b773aeccca94f9c76 SHA256 eea1b8d29532739c1383cb4794c5eacd6176f0972b59e8d29348335b87ff2e66
 EBUILD lxml-2.2.8.ebuild 2151 RMD160 ad0848d90be8e655a239218f4c09192fa856bb88 SHA1 7e9f0c98aee33b1ad32f39d1dcf5fe5bccd09bfa SHA256 1e59b2fcc9d1dec73502ce611d1c9c3e5a9b1124e0ced8dd9308cad42c648344
-MISC ChangeLog 11765 RMD160 beaca84071b6cfd8729b614efb8ebed21b5f07e3 SHA1 40115eb1b0b56c4623df1bbd08d42fdfb54e089e SHA256 b35de21f26bf10a34908a0763cdc146ea6bbd341015d4d72ea37a54272920749
+EBUILD lxml-2.3.ebuild 2302 RMD160 b5468e1d03b6053c6e08b2c5c715320bc27d6a5b SHA1 3cad81ded04dcc11b71708c536ec84ff061b50a7 SHA256 39c90d7df3097cac233b916ef9fe5f50e4e2bed246c564540e84a3edc10e5843
+MISC ChangeLog 11942 RMD160 d9e68121d2727796be5e08fa0735d094e58ec863 SHA1 7510d8fb432718de97b91ef753c8a07de0d2ba01 SHA256 62eaf3043189757700f3353ad41c09eb309551302142ba9de0a5de9a9349bfc0
 MISC metadata.xml 159 RMD160 900a8c55d7a7d2f6312594769aaf941bf9e99c7f SHA1 c8e604d56dae898258b5254d78cfeac0b981e288 SHA256 9f01104d3484792496faff4805eed0ecea2352a897151f3397d49a13800037b4
